--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,11 @@ spring.application.name=uberApp
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?useSSL=false
 spring.datasource.username=postgres
 spring.datasource.password=Madrid@500
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-#spring.jpa.defer-datasource-initialization=true
-#spring.sql.init.mode=always
-#spring.sql.init.data-locations=classpath:data.sql
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:data.sql
